- Bugfix for platform detection in AssistantApps update checker

_Submitted to App Stores 2022-0X-XX_

For more details on this update please visit the "What is New" page in the Apps or on the website
