@@ -1,0 +1,127 @@
+{
+	"guid": "e38a69d0-584d-44ca-9227-e743260c871c",
+	"title": "The lore and Plot of No Mans Sky",
+	"shortTitle": "This guide will show you the lore of NMS a different guide will be made for the plot",
+	"showCreatedByUser": true,
+	"author": "Phinoxdragon",
+	"languageCode": "en",
+	"minutes": 0,
+	"date": "2022-08-22T14:07:35Z",
+	"tags": [
+		"Lore",
+		"Plot"
+	],
+	"sections": [
+		{
+			"guid": "317bd89a-c98b-4064-8b01-6f91e636742f",
+			"heading": "Factions",
+			"sortOrder": 1,
+			"items": [
+				{
+					"guid": "8d5bd89b-a40b-4360-b141-275074b7a079",
+					"type": "text",
+					"content": "Us (travelers/anomalys): we are travelers or the creators of the atlas. The atlas did put us in a simulation for abandoning it to find out why we left it behind. We are the last traveler that was put in the simulation. Telamon is the AI in your suit that talks. It is the sub-protocol that monitered the atlas before being attached to the traveler.\n\nThe Anomalies were created by the ATLAS through brain scans of its creator in an attempt to preserve itself and end its loneliness. However, the data was corrupt.",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 0
+				},
+				{
+					"guid": "9fb6f6ab-981e-430a-ae10-6bdd3372f46d",
+					"type": "text",
+					"content": "The Vy'keen are a race of reptilian humanoids. They originate from the planet Dryn'dargh located on the Outer Edge of the Euclid galaxy.\n\nThey are commonly viewed as hostile by other races, but they fight under a strict code of honor as decreed by the Vy’keen High Command. The Vy'keen is (not counting the sentinels) the most powerful faction.\n\nThey fight for honor and can be violent, they mainly focus their technology on combat in any way.",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 1
+				},
+				{
+					"guid": "abb4e3c1-9cf5-4839-9f85-9242ae84626c",
+					"type": "text",
+					"content": "The Korvax are a highly intellectual mechanical race of machines that are found in many of the galaxies, including the Euclid galaxy. They originate from the planet Korvax Prime located on the border of the Edge and Outer Edge.\n\nThey always wish to know more about their own existence, everything in the universe, and science. While native in a distant galaxy, the Korvax had maintained several systems in Euclid for research purposes within the Edge and Outer Edge until First Spawn Gek nearly eradicated the Korvax population from the Euclid galaxy.\n\nThey worship the atlas and other anomalies. When they start dying they start the \"fading\" process they release their intellectual form into Korvax Echoes, and a new entity will immediately be generated right after the old one has faded.",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 2
+				},
+				{
+					"guid": "413769b0-9230-4d1e-9286-7162f9aa3904",
+					"type": "text",
+					"content": "The Gek are an amphibious species native to the water-rich system Balaron close to the Galaxy Centre. They are now a mercantile race. Their ancestors once believed themselves to be the first and master race in the galaxies until they had slaughtered every entity in their way to build an empire. They were ultimately beaten into submission by the Aerons (sentinels) when the core junta of Gek the First Spawns were killed.\n\nTypical Gek are commonly corporate and plutocratic in their mannerisms, with many of their titles tied to trading / industrial related terms. Most of the initial encounters with the species require units",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 3
+				},
+				{
+					"guid": "a39bdc23-59e9-4622-bf8a-ccdbac23fd4a",
+					"type": "text",
+					"content": "The Sentinels are Mechanical Lifeforms; self-replicating, non-organic machines that are similar to the Korvax, another Mechanical Lifeform in No Man's Sky's Universe. Their origins are unknown but they are seemingly deployed on every known planet to balance the efforts and actions of the player within the galaxy Sentinels act as the workhorse machines of The Atlas and as universal police, policing the actions of those who reside within the universe.\n\nThey are, in essence, the \"gardeners\" of the No Man's Sky universe. If the player makes an attempt to alter the environment while they are around, they will not hesitate to defend their \"garden.\" They will attack the player if caught harming the ecosystem of a planet. A Sentinel will also defend itself if the player shoots it, alerting other Sentinels in the area.",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 4
+				},
+				{
+					"guid": "173ff116-c936-47c7-b872-41b48dd96eec",
+					"type": "text",
+					"content": "The Atlas is a large machine that was designed to simulate universes for research purposes. After improvements to its design, the original Atlas was considered bulky and obsolete, and was abandoned on the planet it was built on. This original Atlas now communicates to the simulated inhabitants of its universes through surrogate characters and spacious interfaces.\n\nMillenia later, the physical fate of the Atlas became apparent when it noticed that its systems were starting to fail. With no access to the physicality needed to prevent its crash, Atlas instead attempted to understand why it was abandoned by seeding a digitized brain of its creator into its universes. The Atlas' creator takes the form of the Travellers.",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 5
+				}
+			]
+		},
+		{
+			"guid": "4892b98b-3fce-4816-be11-758354fde6e2",
+			"heading": "Things we dont see",
+			"sortOrder": 2,
+			"items": [
+				{
+					"guid": "1eaf142c-845b-493a-9589-8a7426442e34",
+					"type": "text",
+					"content": "Several NPC'S mention an ongoing containment breach in the water that alters the minds of those who drink from it. According to the logs of the Sentinel Pillar, The Abyss along with the sentinels are using Nanites to contaminate the water, and change lifeforms across the universe in order to gain freedom from it. It seems that half of the water of the universe is already contaminated.",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 0
+				},
+				{
+					"guid": "e622795f-935a-4cfa-99db-c4ae5e1c336f",
+					"type": "text",
+					"content": "Originally discovered by a group of missing Korvax scientists, the Abyss is a mysterious presence discovered while investigating underwater signals. Logs recording its existence note that its energy signature is similar, but distinct, from the Atlas. A narrator speculates that Atlas and the Abyss have a similar level of influence over the universe. According to the Sentinel Pillar, the identity of the Abyss is that of the AI of Korvax Prime, the Home planet of the Korvax, and the core of the first convergence, that was based off the Atlas itself. The planet was destroyed by the Gek, but the AI somehow survived. It is gaining influence across the universe, using the sentinels that defected from the Atlas. Korvax Colossal Archives suggest that \"Atlantid\" and \"Void Mother\" were other names given to the Abyss before the destruction of Korvax Prime.",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 1
+				},
+				{
+					"guid": "d7262d31-15de-4cc1-a43b-974e79ba67fd",
+					"type": "text",
+					"content": "The World of Glass is a place where nothing can die an \"afterlife\" of sorts, an archive for the simulation.",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 2
+				}
+			]
+		},
+		{
+			"guid": "39835a42-2624-4ef8-91c7-888f44558959",
+			"heading": "spoilers are ahead as always",
+			"sortOrder": 0,
+			"items": [
+				{
+					"guid": "6fed4067-870f-4d49-865d-1861b9272459",
+					"type": "text",
+					"content": "Finish NMS first before reading this but people dont usually listen but whatever lets begin!",
+					"additionalContent": "",
+					"tableColumnNames": [],
+					"tableData": [],
+					"sortOrder": 0
+				}
+			]
+		}
+	]
+}
