@@ -70,5 +70,9 @@
     {
         "folder": "HowToGetLivingShip",
         "file": "guide.en"
+    },
+    {
+        "folder": "TheLoreAndPlot",
+        "file": "guide.en"
     }
 ]
