@@ -140,6 +140,7 @@ flutter:
     - assets/guide/AdvancedExoticShipHunting/
     - assets/guide/HowToGetSFreighter/
     - assets/guide/HowToGetLivingShip/
+    - assets/guide/TheLoreAndPlot/
 
     # Audio
     - assets/audio/
