@@ -1,4 +1,6 @@
 - Bugfix for platform detection in AssistantApps update checker
+- Added The Lore and Plot of NMS by PhinoxDragon
+- Added Portal conversion page
 
 _Submitted to App Stores 2022-0X-XX_
 
